--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "axios": "^1.4.0",
     "babel-preset-react-app": "^10.0.1",
     "framer-motion": "^10.12.16",
+    "metadata-extractor": "^0.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-redux": "^8.0.7",
     "react-scripts": "5.0.1",
+    "url-metadata": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
