--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "metadata-extractor": "^0.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^4.9.0",
     "react-redux": "^8.0.7",
     "react-scripts": "5.0.1",
