--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.4.0",
     "babel-preset-react-app": "^10.0.1",
     "framer-motion": "^10.12.16",
+    "fs": "^0.0.1-security",
     "metadata-extractor": "^0.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
