--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-redux": "^8.0.7",
     "react-scripts": "5.0.1",
     "url-metadata": "^3.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.10"
   },
   "scripts": {
     "start": "react-scripts start",
